--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li><a href="#about">Tentang</a></li>
             <li><a href="#skills">Kemampuan</a></li>
             <li><a href="#education">Pendidikan</a></li>
-            <li><a href="#work">Pekerjaan</a></li>
+            <li><a href="#work">Proyek</a></li>
             <li><a href="#experience">Pengalaman</a></li>
             <li><a href="#contact">Kontak</a></li>
             </ul>
@@ -270,7 +270,7 @@
           <a href="#about"><i class="fas fa-chevron-circle-right"></i> tentang</a>
           <a href="#skills"><i class="fas fa-chevron-circle-right"></i> kemampuan</a>
           <a href="#education"><i class="fas fa-chevron-circle-right"></i> pendidikan</a>
-          <a href="#work"><i class="fas fa-chevron-circle-right"></i> pekerjaan</a>
+          <a href="#work"><i class="fas fa-chevron-circle-right"></i> Proyek</a>
           <a href="#experience"><i class="fas fa-chevron-circle-right"></i> pengalaman</a>
       </div>
 
