--- a/experience/index.html
+++ b/experience/index.html
@@ -186,7 +186,7 @@
       <div class="box">
           <h3>contact info</h3>
           <p> <i class="fas fa-phone"></i>0877160216777</p>
-          <p> <i class="fas fa-envelope"></i>jzul32883@gmail.com</p>
+          <p> <i class="fas fa-envelope"></i>zul32883@gmail.com</p>
           <p> <i class="fas fa-map-marked-alt"></i>Indonesia</p>
           <div class="share">
 
