--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
     </div>
 <div class="image">
-    <img draggable="false" class="tilt" src="./assets/images/y.jpg" alt="">
+    <img draggable="false" class="tilt" src="./assets/images/x.jpg" alt="">
 </div>
 </section>
 <!-- hero section ends -->
@@ -162,7 +162,7 @@
 </div>
 
 <div class="viewall">
-  <a href="/projects" class="btn"><span>Lihat Semua</span>
+  <a href="/projects/index.html" class="btn"><span>Lihat Semua</span>
     <i class="fas fa-arrow-right"></i>
 </a>
 </div>
@@ -203,7 +203,7 @@
   </div> -->
 
   <div class="morebtn">
-    <a href="/experience" class="btn"><span>Lihat Semua</span>
+    <a href="/experience/index.html" class="btn"><span>Lihat Semua</span>
       <i class="fas fa-arrow-right"></i>
   </a>
   </div>
